[CVELA] Cool stuff
Additonal cool stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <main>
+    <!-- Listening to onPostAdded Event and adding it to storedPost -->
     <app-post-create></app-post-create>
+    <app-post-list></app-post-list>
 </main>
 
