--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,24 +1,36 @@
 <mat-card>
-  <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredValue"></textarea>
-  </mat-form-field>
-  <!-- <mat-form-field>
-    <textarea matInput rows="6" [value]="test"></textarea>
-  </mat-form-field>
-  <mat-form-field>
-    <textarea matInput rows="6" [value]="test" #postInput></textarea>
-  </mat-form-field> -->
-  <button mat-raised-button
-  color="accent" (click)="onAddPost()">Save Post</button>
-  <!-- <button mat-raised-button
-  color="accent" (click)="onAddPost2()">Save Post</button> 
-  <button mat-raised-button
-  color="accent" (click)="onAddPost3(postInput)">Save Post</button>   -->
-  <p>{{newPost}}</p>
-  <hr>
-  <!-- <p>{{newPost2}}</p>
-  <hr>
-  <p>{{newPost3}}</p> -->
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <mat-form-field>
+      <input
+        matInput type="text"
+        name="title"
+        ngModel
+        required
+        minlength="3"
+        placeholder="Post Title"
+        #title="ngModel"/>
+        <mat-error *ngIf="title.invalid">
+          Please enter a post title.
+        </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea
+        matInput
+        rows="6"
+        name="content"
+        ngModel
+        required
+        placeholder="Post Content"
+        #content="ngModel"></textarea>
+        <mat-error *ngIf="content.invalid">
+          Please enter a content.
+        </mat-error>
+    </mat-form-field>
+    <button
+      mat-raised-button
+      color="accent"
+      type="submit">
+        Save Post
+    </button>
+  </form>
 </mat-card>
-
-
