[CVELA] Added routing.
Added routing functionality and styling.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 <main>
-    <!-- Listening to onPostAdded Event and adding it to storedPost -->
-    <app-post-create></app-post-create>
-    <app-post-list></app-post-list>
+    <!-- <app-post-create></app-post-create>
+    <app-post-list></app-post-list> -->
+    <!-- Use Angular Module -->
+    <router-outlet></router-outlet>
 </main>
 
