--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,12 @@
 <mat-card>
     <form (submit)="onSavePost(postForm)" #postForm="ngForm">
+      <!--post>.title: angular checks if post exist before getting title -->
       <mat-form-field>
         <input
           matInput
           type="text"
           name="title"
-          [ngModel]="post.title"
+          [ngModel]="post?.title"
           required
           minlength="3"
           placeholder="Post Title"
@@ -17,7 +18,7 @@
           matInput
           rows="4"
           name="content"
-          [ngModel]="post.content"
+          [ngModel]="post?.content"
           required
           placeholder="Post Content"
           #content="ngModel"></textarea>
