--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,5 @@
-<mat-accordion multi="true" *ngIf="posts.length > 0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let post of posts">
     <mat-expansion-panel-header>
       {{post.title}}
@@ -22,6 +23,6 @@
 </mat-accordion>
 <p
   class="info-text mat-body-1"
-  *ngIf="posts.length <= 0">
+  *ngIf="posts.length <= 0 && !isLoading">
     No posts added yet!
 </p>
