--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -10,3 +10,16 @@ mat-spinner {
 input[type="file"] {
   visibility: hidden;
 }
+
+.image-preview {
+  height: 5rem;
+  margin: 1rem 0;
+}
+
+.image-preview img {
+  height: 100%;
+}
+
+.error {
+  font-size: 0.75em;
+}
