--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -13,7 +13,13 @@
       </mat-form-field>
       <div>
         <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
-        <input type="file" #filePicker>
+        <input type="file" #filePicker (change)="onImagePicked($event)">
+      </div>
+      <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+        <img [src]="imagePreview" [alt]="form.value.title">
+      </div>
+      <div class="error">
+        <mat-error *ngIf="imagePreview && !form.get('image').valid">Not an image.</mat-error>
       </div>
       <mat-form-field>
         <textarea
